<resources>
    <string name="app_name">LifeUp</string>
    <string name="title_board">Board</string>
    <string name="title_status">Status</string>
    <string name="title_community">Community</string>
    <string name="title_me">Me</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">Home</string>
    <string name="page1_title">TO-DO LIST</string>
    <string name="page1_content">Write down your to-do list.\nSet urgency and difficulty.\nAnd try to complete them.</string>
    <string name="page2_title">QUANTIFY LIFE</string>
    <string name="page2_content">What if your life is a game...\nWhat if your attributes can be measured by numbers...</string>
    <string name="page3_title">EARNING REWARDS</string>
    <string name="page3_content">Level up your attributes by complete your to-do list.\nGain kinds of achievements and finally level up your life.</string>
    <string name="page4_title">JOIN THE CLOUD</string>
    <string name="page4_content">Share your daily and your life online.\nJoin the online team to finish tasks together.</string>
    <string name="page4_btn">START LIFE UP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_phone">Phone Number</string>
    <string name="login_welcome">Sign In for More Function</string>
    <string name="login_signIn">SIGN IN</string>
    <string name="login_signUp">You don\'t hava an account yet? Please use QQ Login.</string>
    <string name="login_or">or</string>
    <string name="login_viaYiban">SIGN IN WITH YIBAN</string>
    <string name="title_activity_comm">CommActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_add_to_do_item">Add To DO ITEM</string>
    <string name="title_activity_add_team_item">ADD NEW TEAM</string>
    <string name="title_activity_edit_team_item">EDIT TEAM</string>
    <string name="title_activity_team">TEAM DETAIL</string>
    <string name="title_activity_user">USER DETAIL</string>
    <string name="title_activity_edit_to_do_item">EDIT TO DO</string>
    <string name="title_activity_history">HISTORY</string>
    <string name="title_activity_YBLogin">Login by Yiban</string>
    <string name="title_activity_profile">EDIT PROFILE</string>
    <string name="title_activity_user_mine">MY PROFILE</string>
    <string name="title_activity_team_member">MEMBERS</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_user_team">Team</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_achievement">Achievement</string>
    <string name="AcraText">We are sorry that app crash,please send us crash report.</string>
    <string name="AcraTitle">Crash Report</string>
    <string name="AcraCommend">Situation：</string>
    <string name="AcraChannel">LifeUp Report</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_sort">Sort</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_activity_exp">经验值收支详情</string>
    <string name="title_activity_add_category">新建清单</string>
    <string name="page_not_available">本功能未开放！</string>
    <string name="funcation_need_to_login">您需要登录才能使用本功能！\n点击此处登录！</string>
    <string name="network_error">网络错误，请稍后重试。</string>
    <string name="btn_cancel">取消</string>
    <string name="has_been_latest_version">现在是最新版本了！</string>
    <string name="btn_update">更新</string>
    <string name="about_new_version">检测到新版本</string>
    <string name="about_update_content_title">更新内容</string>
    <string name="about_check_update">检查更新</string>
    <string name="about_version_name">版本号</string>
    <string name="about_app_description">一款「人生游戏化」的待办事项管理应用。\n用「游戏化」的形式让你的人生更加美好。</string>
    <string name="contact_title">联系</string>
    <string name="github_desc1">安卓端 Github</string>
    <string name="github_desc2">服务器端 Github</string>
    <string name="achievement_bonus">你获得了200点「活力」经验值！</string>
    <string name="achievement_bonus_2">你获得了2000点「耐力」经验值！</string>
    <string name="achievement_bonus_3">你获得了2000点「力量」、「耐力」经验值！</string>
    <string name="achievement_bonus_4">你获得了5000点「活力」、「耐力」经验值！</string>
    <string name="achievement_bonus_5">你获得了5000点「魅力」经验值！</string>
    <string name="achievement_bonus_6">你获得了10000点「魅力」经验值！</string>
    <string name="achievement_bonus_7">你获得了3000点「力量」经验值！</string>
    <string name="achievement_complete">完成成就</string>
    <string name="category_add_success">成功新建清单</string>
    <string name="category_rename_success">成功重命名</string>
    <string name="category_rename_fail">重命名出现异常</string>
    <string name="category_edittext_empty">清单名字不能为空</string>
    <string name="network_invalid_token">授权失效，请重试</string>
    <string name="profile_nickname">昵称</string>
    <string name="profile_address">居住地（学校）</string>
    <string name="profile_gender">性别</string>
    <string name="profile_avatar">更换头像</string>
    <string name="xml_backup_backup">备份</string>
    <string name="xml_backup_desc">将你的数据备份到外部存储空间。 备份的内容包括：待办事项、计步数据、经验值等级等数据。</string>
    <string name="xml_backup_restore">恢复</string>
    <string name="xml_backup_restore_desc">从你的外部存储空间中恢复数据。 注意：现在的数据将会被覆盖，谨慎操作。</string>
</resources>