<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="net.sarasarasa.lifeup.activities.BackupActivity"
    tools:showIn="@layout/activity_backup">

    <LinearLayout
        android:id="@+id/ly_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_backup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_backup_backup"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_backup_tint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_backup_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_backup_desc"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/ly_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_restore_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_backup_restore"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_restore_tint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_restore_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/xml_backup_restore_desc"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>
