<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.jeff.settingitem.SettingView
        android:id="@+id/sv_nickname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:item_background="@drawable/selector_item"
        app:item_text="@string/profile_nickname"
        app:show_dot="false"
        app:show_left_icon="false"
        app:text_color="#000"
        app:text_size="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ccc" />

    <com.jeff.settingitem.SettingView
        android:id="@+id/sv_address"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:item_background="@drawable/selector_item"
        app:item_text="@string/profile_address"
        app:show_dot="false"
        app:show_left_icon="false"
        app:text_color="#000"
        app:text_size="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ccc" />

    <com.jeff.settingitem.SettingView
        android:id="@+id/sv_sex"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:item_background="@drawable/selector_item"
        app:item_text="@string/profile_gender"
        app:show_dot="false"
        app:show_left_icon="false"
        app:text_color="#000"
        app:text_size="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ccc" />

    <com.jeff.settingitem.SettingView
        android:id="@+id/sv_avatar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:item_background="@drawable/selector_item"
        app:item_text="@string/profile_avatar"
        app:show_dot="false"
        app:show_left_icon="false"
        app:text_color="#000"
        app:text_size="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ccc" />

    <com.jeff.settingitem.SettingView
        android:id="@+id/sv_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:visibility="gone"
        app:item_background="@drawable/selector_item"
        app:item_text="手机号"
        app:show_dot="false"
        app:show_left_icon="false"
        app:text_color="#000"
        app:text_size="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ccc" />

</LinearLayout>